# terminalboard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  RELEASING.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
examples/: gen_demo_logs.py
scripts/: demo.tape  record_demo.sh
terminalboard/: __init__.py  app.py  cli.py  iterm2.py  keys.py  llm.py  model.py  reader.py  reader_light.py  render.py  screen.py
tests/: conftest.py  test_terminalboard.py
